fix APIs call: fix SecurityConfig.java + AdminController.java + UserDto.java + JwtAuthFilter.java + SensorServiceImpl.java + application.yml